use github to login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8080
 
+github.client.id=Iv1.ccb88d8d95038e0b
+github.client.secret=3c199f4c601286c1842aca7d385ecb3e81a760f1
+githib.redirect.uri=http://localhost:8080/callback
