finish mybatis build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.port=8080
 
-github.client.id=Iv1.ccb88d8d95038e0b
-github.client.secret=3c199f4c601286c1842aca7d385ecb3e81a760f1
+github.client.id=c3e9e6b83a25a90264d2
+github.client.secret=8c73bf0847fd26ff7719b29c847874599944d06d
 githib.redirect.uri=http://localhost:8080/callback
+
+spring.datasource.url=jdbc:h2:D:/Code/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
